# wanikani

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.githooks/: pre-commit
.github/workflows/: audit.yml  ci.yml  rust.yml
wanikani-api/: Cargo.toml  intro.md
wanikani-api/examples/: fetch_subjects.rs  sort_subjects.rs
wanikani-api/src/: assignment.rs  client.rs  level_progression.rs  lib.rs  reset.rs  review_statistic.rs  serde_helpers.rs  study_material.rs  subject.rs  summary.rs  user.rs  voice_actor.rs
wanikani-api/src/client/: assignment.rs  level_progression.rs  mod.rs  reset.rs  review_statistic.rs  study_material.rs  subject.rs  summary.rs  user.rs  voice_actor.rs
wanikani-api/test_files/: assignment.json  create_study_material.json  kana_vocabulary.json  kanji.json  level_progression.json  radical.json  reset.json  review_statistic.json  study_material.json  summary.json  update_study_material.json  update_user.json  user.json  vocabulary.json  voice_actors.json
