[package]
authors = ["Bennett Buckley <ben.buckley@outlook.com>"]
categories = ["api-bindings"]
description = "A Rust implementation of a Wanikani API client"
documentation = "https://docs.rs/wanikani-api"
edition = "2021"
include = ["src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
keywords = ["wanikani", "wk"]
license = "MIT OR Apache-2.0"
name = "wanikani-api"
readme = "README.md"
repository = "https://github.com/bladepoint6969/wanikani"
rust-version = "1.62.1"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", default-features = false, features = ["serde", "clock"]}
log = "0.4.19"
reqwest = {version = "0.11.18", features = ["json"], optional = true}
serde = {version = "1.0.164", features = ["derive"]}
thiserror = "1.0.40"
url = {version = "2.4.0", features = ["serde"]}
uuid = {version = "1.3.4", features = ["v4", "serde"]}

[features]
client = ["reqwest"]
default = ["client", "model"]
level_progression = []
model = ["level_progression", "summary", "user", "voice_actor"]
summary = []
user = []
voice_actor = []

[dev-dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde_json = "1.0.99"
tokio = {version = "1.28.2", features = ["macros", "time"]}
