[package]
authors = ["Bennett Buckley <ben.buckley@outlook.com>"]
categories = ["api-bindings"]
description = "A Rust implementation of a Wanikani API client"
documentation = "https://docs.rs/wanikani-api"
edition = "2021"
homepage = "https://github.com/bladepoint6969/wanikani"
include = ["src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
keywords = ["wanikani", "wk"]
license = "MIT OR Apache-2.0"
name = "wanikani-api"
readme = "README.md"
repository = "https://github.com/bladepoint6969/wanikani"
rust-version = "1.62.1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", default-features = false, features = ["serde", "clock"]}
log = "0.4"
mime = "0.3"
mime_serde_shim = "0.2"
rand = {version = "0.8", optional = true}
reqwest = {version = "0.11", features = ["json"], optional = true, default-features = false}
serde = {version = "1", features = ["derive"]}
thiserror = "1"
url = {version = "2", features = ["serde"]}
uuid = {version = "1", features = ["v4", "serde"]}

[features]
client = ["reqwest"]
default = ["client", "default-tls", "model"]
default-tls = ["reqwest/default-tls"]
lesson_order_sort = ["rand", "subject"]
level_progression = []
model = ["level_progression", "reset", "review_statistic", "study_material", "subject", "summary", "user", "voice_actor", "lesson_order_sort"]
reset = []
review_statistic = []
rustls-tls = ["reqwest/rustls-tls"]
study_material = []
subject = []
summary = []
user = []
voice_actor = []

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.10"
serde_json = "1"
tokio = {version = "1", features = ["macros", "time", "rt"]}

[[example]]
name = "fetch_subjects"
required-features = ["client", "subject", "default-tls"]

[[example]]
name = "sort_subjects"
required-features = ["client", "subject", "default-tls", "user", "lesson_order_sort"]
